--- a/templates/config.json
+++ b/templates/config.json
@@ -9,7 +9,9 @@
             "git_url"      :"https://github.com/milton9220",
             "blog_title"   :"ICT Learner",
             "blog_logo"    :"ICT LEARNER",
-            "blog_tagline" :"BY MILTON"
+            "blog_tagline" :"BY MILTON",
+            "gmail-user":"tayabarahaman779@gmail.com",
+            "gmail-password":"abrarhasan105142"
 
 
     }
