--- a/templates/config.json
+++ b/templates/config.json
@@ -4,14 +4,15 @@
             "local_server" :"True",
             "local_uri"    :"mysql://root:@localhost/ict_learner",
             "produc_uri"   :"mysql://root:@localhost/ict_learner",
-            "fb_url"       :"https://facebook.com/abrar hasan",
+            "fb_url"       :"https://facebook.com/abrar hasan milton",
             "tw_url"       :"https://twiter.com",
             "git_url"      :"https://github.com/milton9220",
             "blog_title"   :"ICT Learner",
             "blog_logo"    :"ICT LEARNER",
             "blog_tagline" :"BY MILTON",
-            "gmail-user":"tayabarahaman779@gmail.com",
-            "gmail-password":"abrarhasan105142"
+            "gmail-user"   :"tayabarahaman779@gmail.com",
+            "gmail-password":"abrarhasan105142",
+            "about_text"    :"Hi,,,I am Monjur Hasan Milton.I am     a  student of computer science engineer. In this   website you can learn ICT books all chapter"
 
 
     }
