--- a/templates/config.json
+++ b/templates/config.json
@@ -12,7 +12,8 @@
             "blog_tagline" :"BY MILTON",
             "gmail-user"   :"tayabarahaman779@gmail.com",
             "gmail-password":"abrarhasan105142",
-            "about_text"    :"Hi,,,I am Monjur Hasan Milton.I am     a  student of computer science engineer. In this   website you can learn ICT books all chapter"
+            "about_text"    :"Hi,,,I am Monjur Hasan Milton.I am     a  student of computer science engineer. In this   website you can learn ICT books all chapter",
+            "num_of_post"   :4
 
 
     }
