modified config.json file

--- a/templates/config.json
+++ b/templates/config.json
@@ -13,7 +13,9 @@
             "gmail-user"   :"tayabarahaman779@gmail.com",
             "gmail-password":"abrarhasan105142",
             "about_text"    :"Hi,,,I am Monjur Hasan Milton.I am     a  student of computer science engineer. In this   website you can learn ICT books all chapter",
-            "num_of_post"   :4
+            "num_of_post"   :4,
+            "admin_name"    :"milton",
+            "password"      :"12345678"
 
 
     }
