--- a/templates/config.json
+++ b/templates/config.json
@@ -11,7 +11,7 @@
             "blog_logo"    :"ICT LEARNER",
             "blog_tagline" :"BY MILTON",
             "gmail-user"   :"tayabarahaman779@gmail.com",
-            "gmail-password":"abrarhasan105142",
+            "gmail-password":"",
             "about_text"    :"Hi,,,I am Monjur Hasan Milton.I am     a  student of computer science engineer. In this   website you can learn ICT books all chapter",
             "num_of_post"   :4,
             "admin_name"    :"milton",
